# csvsql-rs

./: .gitignore  Cargo.toml  Dockerfile-dev  Makefile  README.md
.github/workflows/: all.yml  master.yml  rust.yml  test.yml
assets/: easy_ddl.sql
benches/: bench_main.rs
src/: main.rs
src/csvsql/: lib.rs
tests/: tests.rs
