[package]
name = "csvsql"
author = "Michael P. Moran"
version = "0.1.2"
edition = "2021"

[lib]
name = "csvsqllib"
path = "src/csvsql/lib.rs"

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
csv = "1.1.6"
env_logger = "0.9.0"
log = "0.4.14"
rusqlite = { version = "0.26.3", features = ["bundled", "csvtab"] }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "bench_main"
harness = false

[[bin]]
name = "csvsql"
